[package]
name = "dcore"
version = "0.1.0"
description = "It contains core functions for unpacking, running in threads, and controlling with channels."
authors = ["Burak Selim Şenyurt"]
edition = "2021"
license= "MIT"
keywords = ["distributed cache" , "caching" , "experimental"]
repository = "https://github.com/buraksenyurt/dory/tree/main/dcore"
categories = ["Distributed Systems"]

[dependencies]
log="0.4.14"
thiserror = "1.0.30"
