[package]
name = "dserver"
authors = ["Burak Selim Şenyurt"]
description = "A lightweigth distributed cache application candidate. (Experimental Project)"
version = "0.1.0"
edition = "2021"
license= "MIT"
keywords = ["distributed cache" , "caching" , "experimental"]
repository = "https://github.com/buraksenyurt/dory/"
categories = ["Distributed Systems"]

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror="1.0.30"
log="0.4.14"
env_logger = "0.9.0"
crossbeam = "0.8.1"